--- a/unoJLTest.ipynb
+++ b/unoJLTest.ipynb
@@ -12,8 +12,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "d965f627-9242-4abe-92b1-6ab7cfa8d947",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9ba159cf-1904-4d66-8592-37dc35e2c79f",
    "metadata": {},
    "outputs": [],
    "source": []
