--- a/unoJLTest.ipynb
+++ b/unoJLTest.ipynb
@@ -77,8 +77,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "9db6b677-cc89-4eed-8777-b228843cec77",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "2+2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4375fdfe-4513-47fd-94e3-c3d3318a932f",
    "metadata": {},
    "outputs": [],
    "source": []
